--- a/index.jade
+++ b/index.jade
@@ -17,8 +17,11 @@ html
                     .typ-larger
                         p Ever wanted to build a website or an app?
                         p #{title} will help you learn how to create real products in one action-packed & incredibly fun #{hours_long} hour event.
-                    p: a.button.large(href=register_link) Pre-Register >
-                    p: a.action_link(href=mentor_doc) Want to sponsor? Start here >
+                        //p: a.button.large(href=register_link) Pre-Register >
+                        //p: a.action_link(href=mentor_doc) Want to sponsor? Start here >
+                    hr
+                    p.typ-large PilotOxy is hosted in collaboration with <a href="http://www.adventuresofthemind.org">Adventures of the Mind</a>, an invite-only event for the top high school students across the US. <a href="http://www.adventuresofthemind.org">Learn more <span class="link-arrow">></span></a>
+
             .row
                 nav.box.span-7.align-top.mobile-full
                     a(href="#about") About
@@ -63,14 +66,11 @@ html
             .box.white.span-9.mobile-full
                 .sponsors-row
                     .span-4.mobile-4
-                        a(href="http://intel.com/"): img(src="/img/intel.png")
+                        a(href="http://www.mashery.com/"): img(src="/img/mashery.png")
                     .span-4.mobile-4
-                        a(href="http://www.jesuitportland.org/"): img(src="/img/jesuit.png")
+                        a(href="http://www.adventuresofthemind.org"): img(src="/img/aom.svg")
                     .span-4.mobile-4
-                        a(href="https://software.intel.com/en-us/codeforgood/"): img(src="/img/codeForGood.png")
-                .sponsors-row
-                    .span-10.mobile-10.push-1
-                        a(href="http://microsoft.com/"): img(src="/img/microsoft.png")
+                        a(href="https://www.oxy.edu/"): img(src="/img/oxy.png")
 
         .section.schedule.large#schedule
             .box.title.blue.span-3
@@ -117,5 +117,5 @@ html
                 p While there are no strict guidelines on how to dress, clothing has a profound <a href="http://www.sciencedirect.com/science/article/pii/S0022103112000200">effect on the wearer's psychological processes</a>. If you look good, you end up doing better work. We’ll also have a photographer present throughout the event, so you all might want to look sharp.
 
                 h5 What if I have a question that's not here?
-                    p We'd love to help answer it for you! Send us an email at <a href="mailto:fly@gopilot.org">fly@gopilot.org</a> with your question, and we'll get back to you within 24 hours.
+                p We'd love to help answer it for you! Send us an email at <a href="mailto:fly@gopilot.org">fly@gopilot.org</a> with your question, and we'll get back to you within 24 hours.
         <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', '#{analytics}', 'gopilot.org');ga('send', 'pageview');</script>
