--- a/index.jade
+++ b/index.jade
@@ -21,6 +21,8 @@ html
                         //p: a.action_link(href=mentor_doc) Want to sponsor? Start here >
                     hr
                     p.typ-large PilotOxy is hosted in collaboration with <a href="http://www.adventuresofthemind.org">Adventures of the Mind</a>, an invite-only event for the top high school students across the US. <a href="http://www.adventuresofthemind.org">Learn more <span class="link-arrow">></span></a>
+                    p.typ-large We need mentors from all technical backgrounds to inspire the next generation of doers. <a href="http://pilotoxy.eventbrite.com">Register now as a mentor <span class="link-arrow">></span></a>
+
 
             .row
                 nav.box.span-7.align-top.mobile-full
@@ -114,7 +116,7 @@ html
                 p Yes. The only thing you need to worry about is building your app; let us take care of the rest. Lunch, dinner, snacks, and plenty of drinks will be provided throughout the competition at no cost to participants. We will be providing vegetarian options as well. If you have a specific food allergy or other specific need, contact us and we'll try to find a way to make it work for you. Breakfast will not be provided, so please eat before arriving!
 
                 h5 What should I wear?
-                p While there are no strict guidelines on how to dress, clothing has a profound <a href="http://www.sciencedirect.com/science/article/pii/S0022103112000200">effect on the wearer's psychological processes</a>. If you look good, you end up doing better work. We’ll also have a photographer present throughout the event, so you all might want to look sharp.
+                p While there are no strict guidelines on how to dress, clothing has a profound <a href="hhttp://www.gsb.stanford.edu/news/headlines/researchers-few-bad-hair-days-can-change-your-life">effect on the wearer's psychological processes</a>. If you look good, you end up doing better work. We’ll also have a photographer present throughout the event, so you all might want to look sharp.
 
                 h5 What if I have a question that's not here?
                 p We'd love to help answer it for you! Send us an email at <a href="mailto:fly@gopilot.org">fly@gopilot.org</a> with your question, and we'll get back to you within 24 hours.
